[package]
name = "score_visualizer"
version = "1.0.0"
authors = []
edition = "2021"

[[bin]]
name = "score_visualizer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
